# lemma-platform

./: .gitignore  Makefile  README.md  install.ps1
.github/workflows/: ci.yml  release-local-images.yml
docs/: installation.md
lemma-backend/: Makefile  README.md
lemma-backend/app/core/: config.py
lemma-backend/app/core/helpers/: humanize.py
lemma-backend/app/modules/agent/api/controllers/: tool_controller.py
lemma-backend/app/modules/agent/infrastructure/harnesses/: pydantic_ai.py
lemma-backend/app/modules/agent/services/: agent_runner_service.py
lemma-backend/app/modules/agent/tests/e2e/: system_lemma_helpers.py  test_agent_e2e.py  test_agent_usage_e2e.py  test_subagents_e2e.py
lemma-backend/app/modules/agent/tests/unit/: test_agent_tool_controller.py
lemma-backend/app/modules/agent/tools/connectors/: __init__.py  connectors.py
lemma-backend/app/modules/agent_surfaces/tests/unit/: test_platform_new_adapters.py
lemma-backend/app/modules/connectors/infrastructure/adapters/: lemma_connector_factory.py  lemma_operation_gateway.py
lemma-backend/app/modules/connectors/tests/e2e/: test_accounts_connect_requests_e2e.py  test_connector_operations.py
lemma-backend/app/modules/connectors/tests/unit/: test_composio_auth_provider.py  test_connector_service.py  test_import_connector_catalog.py  test_lemma_connectors_laziness.py
lemma-backend/app/modules/datastore/api/: record_query.py
lemma-backend/app/modules/datastore/api/controllers/: changes_controller.py  public_file_controller.py  signed_file_controller.py
lemma-backend/app/modules/datastore/domain/: errors.py
lemma-backend/app/modules/datastore/infrastructure/: db_error_parser.py  kreuzberg_helper.py  record_repository.py  schema_manager.py  sql_identifiers.py  storage.py
lemma-backend/app/modules/datastore/services/: authorization.py  file_processing_service.py  record_service.py  record_validator.py  table_service.py
lemma-backend/app/modules/datastore/services/files/: path_resolver.py  projection.py  reader.py  renderer.py  writer.py
lemma-backend/app/modules/datastore/services/search/: postgres_search_service.py
lemma-backend/app/modules/datastore/tests/e2e/: harness.py  test_changes_ws_e2e.py  test_records_e2e.py
lemma-backend/app/modules/datastore/tests/unit/: test_db_error_parser.py  test_table_and_sync_services.py
lemma-backend/app/modules/icon/tests/unit/: test_icon_api.py
lemma-backend/app/modules/identity/tests/e2e/: conftest.py  test_identity_e2e.py
lemma-backend/app/modules/identity/tests/unit/: conftest.py  test_auth_controller.py  test_email_adapter.py  test_helpers.py  test_organization_service.py  test_user_service.py
lemma-backend/app/modules/pod/tests/e2e/: test_pod_controller.py  test_pod_join_request_controller_e2e.py  test_pod_member_controller_e2e.py
lemma-backend/app/modules/pod/tests/unit/: test_pod_member_service.py  test_pod_service.py
lemma-backend/app/modules/test_support/: e2e_authz.py  e2e_base.py
lemma-backend/app/modules/workflow/tests/e2e/: test_flow_execution_e2e.py
lemma-backend/lemma-connectors/scripts/: generate_resource_operations.py
lemma-backend/lemma-connectors/src/lemma_connectors/: __init__.py
lemma-backend/lemma-connectors/src/lemma_connectors/core/: client.py  openapi.py
lemma-backend/lemma-connectors/src/lemma_connectors/gmail/: client.py
lemma-backend/lemma-connectors/src/lemma_connectors/gmail/resources/: __init__.py
lemma-backend/lemma-connectors/src/lemma_connectors/google_calendar/: client.py
lemma-backend/lemma-connectors/src/lemma_connectors/google_calendar/resources/: __init__.py
lemma-backend/lemma-connectors/src/lemma_connectors/google_docs/: client.py
lemma-backend/lemma-connectors/src/lemma_connectors/google_docs/resources/: __init__.py
lemma-backend/lemma-connectors/src/lemma_connectors/google_drive/: client.py
lemma-backend/lemma-connectors/src/lemma_connectors/google_sheets/: client.py
lemma-backend/lemma-connectors/src/lemma_connectors/jira/: client.py
lemma-backend/lemma-connectors/src/lemma_connectors/slack/: client.py
lemma-backend/lemma-connectors/tests/: test_jira_client.py
lemma-backend/load_tests/: docker-compose.load-test.yml  postgres-init.sql  setup.py  ws_concurrent.js
lemma-backend/scripts/: import_connector_catalog.py  sample_local_agent_chat.py  workspace_run.py
lemma-cli/: Makefile  pyproject.toml
lemma-cli/lemma_cli/: __init__.py
lemma-cli/lemma_cli/cli_core/: select.py
lemma-cli/lemma_cli/cli_core/commands/: tools.py
lemma-cli/tests/: conftest.py  test_cli_auth_flow.py  test_cli_v2.py  test_commands_agents.py  test_commands_apps.py  test_commands_connectors_surfaces.py  test_commands_conversations.py  test_commands_functions.py  test_commands_orgs_pods.py  test_commands_profile.py  test_commands_runtime.py  test_commands_schedules.py  test_commands_tables_records.py  test_commands_tools.py  test_commands_workflows.py  test_confirm.py  test_io_rendering.py  test_pod_bundle.py
lemma-cli/tests/e2e/: conftest.py  helpers.py  test_e2e_agents.py  test_e2e_files.py  test_e2e_orgs_pods.py  test_e2e_schedules.py  test_e2e_tables_records.py  test_e2e_tools.py
lemma-frontend/: design.md  package-lock.json
lemma-frontend/app/pod/[id]/flows/: page.tsx
lemma-frontend/components/docs/: docs-shell.tsx
lemma-frontend/components/shared/: resource-feedback.tsx
lemma-frontend/docs/: design-tokens.md
lemma-frontend/lib/hooks/: use-functions.ts
lemma-python/: pyproject.toml
lemma-python/lemma_sdk/: _spec_info.py  openapi_spec.json
lemma-python/lemma_sdk/openapi_client/models/: __init__.py
lemma-python/lemma_sdk/resources/: tools.py
lemma-python/tests/integration/: test_customer_support_scenario.py
lemma-stack/: pyproject.toml
lemma-stack/tests/: test_install_experience.py
lemma-typescript/: package.json
lemma-typescript/public/: lemma-client.js
lemma-typescript/src/: version.ts
lemma-typescript/src/namespaces/: connectors.ts
lemma-typescript/src/openapi_client/: index.ts
lemma-typescript/src/openapi_client/services/: AgentToolsService.ts
(+12 files in other folders)
