[project]
name = "lemma-sdk"
version = "0.5.3"
description = "Python SDK for Lemma"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Lemma" }]
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31.0",
  "httpx>=0.28.0",
  "attrs>=23.2.0",
  "pydantic>=2.11.0",
  "python-dateutil>=2.9.0.post0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["lemma_sdk*"]
exclude = ["build*", "dist*", "*.egg-info*", "docs*"]

[tool.setuptools.package-data]
lemma_sdk = ["openapi_spec.json", "py.typed"]

[tool.pytest.ini_options]
markers = [
  "integration: real Lemma API scenarios; requires LEMMA_TOKEN and a running API",
  "connector: real Lemma connector scenarios; requires LEMMA_RUN_CONNECTOR=1 and a running API",
]
